--- a/Homework_Ecommerce.ipynb
+++ b/Homework_Ecommerce.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLQSVGXnaHpTDMQVlEg026",
+      "authorship_tag": "ABX9TyM44xmm5XVhXUx21cdoHLoa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Importando as bibliotecas e o Dataset"
+      ],
+      "metadata": {
+        "id": "93Cd1dPwVGQr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -69,6 +79,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Merge dos Datasets"
+      ],
+      "metadata": {
+        "id": "vY-U5GC0VPj2"
+      }
     },
     {
       "cell_type": "code",
@@ -1297,6 +1316,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Início da limpeza dos dados"
+      ],
+      "metadata": {
+        "id": "CNkJdFOHVkB7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "duplicatas"
+      ],
+      "metadata": {
+        "id": "BETMBnvUVxfi"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Checando duplicatas\n",
@@ -1358,6 +1395,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Averiguando existencias de valores nulos"
+      ],
+      "metadata": {
+        "id": "IkMNmB8iU8TU"
+      }
     },
     {
       "cell_type": "code",
@@ -1644,6 +1690,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Conversão e padronização das colunas"
+      ],
+      "metadata": {
+        "id": "owZ1KHckUld2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#PADRONIZAÇÃO\n",
@@ -1844,23 +1899,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "83a379ff",
-        "outputId": "9e762586-d80c-4b98-ff54-6ee361178f3b"
+        "outputId": "64806ebb-b8bf-420f-f313-38a6f9ef81cb"
       },
       "source": [
         "from scipy.stats import zscore\n",
         "df['Z_score'] = zscore(df['price'])\n",
-        "outliers_zscore = df[df['Z_score'].abs() > 3]\n",
-        "print(f\"Número de outliers identificados com Z-score: {len(outliers_zscore)}\")\n",
+        "outliers_zscore_df_price = df[df['Z_score'].abs() > 3]\n",
+        "print(f\"Número de outliers em df (coluna 'price') identificados com Z-score: {len(outliers_zscore_df_price)}\")\n",
+        "\n",
+        "df2['Z_score'] = zscore(df2['order_estimated_delivery_date'])\n",
+        "outliers_zscore_df_price = df[df['Z_score'].abs() > 3]\n",
+        "print(f\"Número de outliers em df2 (coluna 'order_estimated_delivery_date') identificados com Z-score: {len(outliers_zscore_df_price)}\")\n",
+        "\n",
+        "df3['Z_score'] = zscore(df3['product_weight_g'].dropna()) # Adicionei dropna() para garantir apenas valores numéricos\n",
+        "outliers_zscore_df3_weight = df3[df3['Z_score'].abs() > 3]\n",
+        "print(f\"Número de outliers em df3 (coluna 'product_weight_g') identificados com Z-score: {len(outliers_zscore_df3_weight)}\")\n",
         "\n",
         "#Manter os outliers pois por mais que os preços se destontiem dos demais, são vendas reais"
       ],
-      "execution_count": 32,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Número de outliers identificados com Z-score: 1966\n"
+            "Número de outliers em df (coluna 'price') identificados com Z-score: 1966\n",
+            "Número de outliers em df2 (coluna 'order_estimated_delivery_date') identificados com Z-score: 1966\n",
+            "Número de outliers em df3 (coluna 'product_weight_g') identificados com Z-score: 961\n"
           ]
         }
       ]
@@ -2068,6 +2133,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Gráficos"
+      ],
+      "metadata": {
+        "id": "TzPdqowgWf2R"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -2176,6 +2250,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Features Engineering"
+      ],
+      "metadata": {
+        "id": "P9PCYTdZWpRI"
+      }
     },
     {
       "cell_type": "code",
